# link-what-you-include

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  README.md  conanfile.py
.github/workflows/: asan.yml  build_and_test.yml  ci.yml  common_ctest.cmake  coverage.yml  simple.yml
app/: CMakeLists.txt
app/src/: graph_tool.cpp  graph_tool.hpp  main.cpp  run_lwyi.cpp  run_lwyi.hpp  run_lwyi_on_target.cpp  run_lwyi_on_target.hpp  run_tool.cpp  run_tool.hpp  tidy_tool.cpp  tidy_tool.hpp
app/test/: dogfood_test.cmake
cmake/: clang_tidy_support.cmake  link_what_you_include.cmake
lib/cli/: CMakeLists.txt
lib/cli/include/cli/: command_options.hpp  parse_arguments.hpp
lib/cli/src/: parse_arguments.cpp
lib/cli/test/: parse_arguments_test.cpp
lib/lwyi/: CMakeLists.txt
lib/lwyi/include/lwyi/: check_target.hpp  command_options.hpp  dependency_visibility.hpp  mode.hpp  parse_arguments.hpp  strongly_connected_dependencies.hpp
lib/lwyi/src/: check_target.cpp  dependency_visibility.cpp  parse_arguments.cpp  strongly_connected_dependencies.cpp
lib/lwyi/test/: check_target_test.cpp  dependency_visibility_test.cpp  parse_arguments_test.cpp  strongly_connected_dependencies_test.cpp
lib/message/: CMakeLists.txt
lib/message/include/message/: message.hpp
lib/message/src/: message.cpp
lib/scanner/: CMakeLists.txt
lib/scanner/include/scanner/: include.hpp  scan.hpp
lib/scanner/src/: executable_path.cpp  executable_path.hpp  merge_includes.cpp  merge_includes.hpp  relative_resource_dir.hpp.in  scan.cpp  scan_impl.cpp  scan_impl.hpp
lib/scanner/test/: scan_test.cpp
lib/target_model/: CMakeLists.txt
lib/target_model/include/target_model/: target.hpp  target_data.hpp  target_model.hpp  target_model_loader.hpp
lib/target_model/src/: file_loader.hpp  real_file_loader.cpp  real_file_loader.hpp  target_data.cpp  target_model.cpp  target_model_loader_impl.cpp  target_model_loader_impl.hpp
lib/target_model/test/: target_data_test.cpp  target_model_loader_impl_test.cpp
lib/tidy/: CMakeLists.txt
lib/tidy/include/tidy/: config.hpp  load_config.hpp  tidy.hpp
lib/tidy/src/: cluster_diff.cpp  cluster_diff.hpp  load_config.cpp  load_config_impl.cpp  load_config_impl.hpp  tidy.cpp
lib/tidy/test/: cluster_diff_test.cpp  load_config_impl_test.cpp  tidy_test.cpp
lib/util/: CMakeLists.txt
lib/util/include/util/: arg_parser.hpp  parallel_transformer.hpp  utils.hpp
lib/util/src/: parallel_transformer.cpp  utils.cpp
lib/util/test/: arg_parser_test.cpp  parallel_transformer_test.cpp  utils_test.cpp
tools/: build_catch2.sh  build_clangtooling.sh  build_simdjson.sh  format.sh
